--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,8 +9,8 @@
 <ion-content padding>
   <ion-item>
     <ion-label floating>Name</ion-label>
-    <ion-input type="text"></ion-input>
+    <ion-input type="text" [(ngModel)]="personName"></ion-input>
   </ion-item>
 
-  <button ion-button block clear>Show Greeting</button>
+  <button ion-button block clear (click)="showGreeting(personName)">Show Greeting</button>
 </ion-content>
